--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
-    "vant": "4",
+    "vant": "4.2.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -32,6 +32,7 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.3.6",
     "consola": "^3.1.0",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
