--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@vant/area-data": "^1.4.1",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vant": "4.2.0",
